--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:cshum/anchor.js.git"
+    "url": "git@github.com:cshum/anchorjs.git"
   },
   "keywords": [
     "api",
