Update package description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ginga",
   "version": "0.1.7",
-  "description": "Ginga modularises asynchronous control flow of Javascript functions.",
+  "description": "Middleware framework for JavaScript functions",
   "scripts": {
     "test": "set -e; for t in test/*.js; do node $t; done"
   },
