--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "hooks",
     "middleware"
   ],
-  "author": "Adrian C Shum <me@cshum.com>",
+  "author": "Adrian C Shum <adrian@cshum.com>",
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
