--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "Middleware framework for JavaScript functions",
   "scripts": {
-    "test": "set -e; for t in test/*.js; do node $t; done",
+    "test": "set -e; standard; for t in test/*.js; do node $t; done",
     "build": "rm -rf dist; mkdir dist; npm run browserify;",
     "browserify": "browserify . -s ginga | derequire > dist/ginga.js"
   },
@@ -21,7 +21,8 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "tape": "^3.0.2",
-    "derequire": "^2.0.0"
+    "derequire": "^2.0.0",
+    "standard": "^5.1.1",
+    "tape": "^3.0.2"
   }
 }
