--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 language: node_js
+
 node_js:
-  - "0.10"
-  - 0.12
+  - 5
+  - 4
+
+cache:
+  directories:
+  - node_modules
+
+notifications:
+  email: false
